[fix CORS issues]
Matching package formatting and loosen header restrictions.